# Pooling_calculator

./: .dockerignore  .gitignore  CLAUDE.md  CLAUDE_backup.md  Claude_Code_Guidelines.txt  DEVELOPMENT.md  FORMULA_ANALYSIS.md  HIERARCHICAL_POOLING_IMPLEMENTATION.md  HIERARCHICAL_POOLING_PLAN.md  QUICKSTART.md  README.md  SPEC.md  TODO.md  check_env.py  pyproject.toml  test_compute_real_data.py  test_gradio.py  test_real_data.py  test_real_data_v2.py  test_ui_integration.py  test_validation_real_data.py
.claude/: settings.local.json
data/: 7050I_expected_outputs.csv  7050I_expected_outputs.xlsx  7050I_miRNA_pool_copy.xlsx  7050I_test_input.csv  7050I_test_input.xlsx  ANALYSIS.md  README.md
docker/: Dockerfile  README.md  docker-compose.yml
src/pooling_calculator/: __init__.py  compute.py  config.py  hierarchical.py  io.py  models.py  prepooling.py  ui.py  validation.py
tests/: __init__.py  create_test_fixtures.py  test_compute.py  test_hierarchical.py  test_integration.py  test_io.py  test_models.py  test_validation.py
tests/fixtures/: alternative_columns.xlsx  invalid_duplicate_barcode.csv  invalid_missing_column.csv  missing_column.xlsx  valid_pool.csv  valid_pool.xlsx
